--- a/examples/orders-latest/datacontract.yaml
+++ b/examples/orders-latest/datacontract.yaml
@@ -54,6 +54,10 @@ models:
         type: text
         format: email
         required: true
+      processed_timestamp:
+        description: The timestamp when the record was processed by the data platform.
+        type: timestamp
+        required: true
   line_items:
     description: A single article that is part of an order.
     type: table
@@ -93,17 +97,17 @@ examples:
   - type: csv # csv, json, yaml, custom
     model: orders
     data: |- # expressed as string or inline yaml or via "$ref: data.csv"
-      order_id,order_timestamp,order_total,customer_id,customer_email_address
-      "1001","2030-09-09T08:30:00Z",2500,"1000000001","mary.taylor82@example.com"
-      "1002","2030-09-08T15:45:00Z",1800,"1000000002","michael.miller83@example.com"
-      "1003","2030-09-07T12:15:00Z",3200,"1000000003","michael.smith5@example.com"
-      "1004","2030-09-06T19:20:00Z",1500,"1000000004","elizabeth.moore80@example.com"
-      "1005","2030-09-05T10:10:00Z",4200,"1000000004","elizabeth.moore80@example.com"
-      "1006","2030-09-04T14:55:00Z",2800,"1000000005","john.davis28@example.com"
-      "1007","2030-09-03T21:05:00Z",1900,"1000000006","linda.brown67@example.com"
-      "1008","2030-09-02T17:40:00Z",3600,"1000000007","patricia.smith40@example.com"
-      "1009","2030-09-01T09:25:00Z",3100,"1000000008","linda.wilson43@example.com"
-      "1010","2030-08-31T22:50:00Z",2700,"1000000009","mary.smith98@example.com"
+      order_id,order_timestamp,order_total,customer_id,customer_email_address,processed_timestamp
+      "1001","2030-09-09T08:30:00Z",2500,"1000000001","mary.taylor82@example.com","2030-09-09T08:31:00Z"
+      "1002","2030-09-08T15:45:00Z",1800,"1000000002","michael.miller83@example.com","2030-09-09T08:31:00Z"
+      "1003","2030-09-07T12:15:00Z",3200,"1000000003","michael.smith5@example.com","2030-09-09T08:31:00Z"
+      "1004","2030-09-06T19:20:00Z",1500,"1000000004","elizabeth.moore80@example.com","2030-09-09T08:31:00Z"
+      "1005","2030-09-05T10:10:00Z",4200,"1000000004","elizabeth.moore80@example.com","2030-09-09T08:31:00Z"
+      "1006","2030-09-04T14:55:00Z",2800,"1000000005","john.davis28@example.com","2030-09-09T08:31:00Z"
+      "1007","2030-09-03T21:05:00Z",1900,"1000000006","linda.brown67@example.com","2030-09-09T08:31:00Z"
+      "1008","2030-09-02T17:40:00Z",3600,"1000000007","patricia.smith40@example.com","2030-09-09T08:31:00Z"
+      "1009","2030-09-01T09:25:00Z",3100,"1000000008","linda.wilson43@example.com","2030-09-09T08:31:00Z"
+      "1010","2030-08-31T22:50:00Z",2700,"1000000009","mary.smith98@example.com","2030-09-09T08:31:00Z"
   - type: csv
     model: line_items
     data: |-
@@ -118,11 +122,40 @@ examples:
       "LI-8","1005","2001234567893"
       "LI-9","1005","5001234567892"
       "LI-10","1005","6001234567891"
+servicelevel:
+  availability:
+    percentage: 99.9%
+    description: The server is available during support hours
+  retention:
+    period: P1Y
+    unlimited: false
+    description: Data is retained for one year because!
+  latency:
+    threshold: 25h
+    businessTimestampField: orders.order_timestamp
+    processedTimestampField: orders.processed_timestamp
+    description: Data is available within 25 hours after the order was placed
+  freshness:
+    threshold: 25h
+    timestampField: orders.order_timestamp
+    description: The age of the youngest row in a table.
+  frequency:
+    type: batch # or streaming
+    interval: daily # for batch, either or cron
+    cron: 0 0 * * * # for batch, either or interval
+    description: Data is delivered once a day
+  support:
+    time: 9am to 5pm in EST on business days
+    responseTime: 1h
+    description: The data is available during typical business hours at headquarters
+  backup:
+    interval: weekly
+    cron: 0 0 * * 0
+    description: Data is backed up once a week, every Sunday at 0:00 UTC.
 quality:
   type: SodaCL   # data quality check format: SodaCL, montecarlo, custom
   specification: # expressed as string or inline yaml or via "$ref: checks.yaml"
     checks for orders:
-      - freshness(order_timestamp) < 24h
       - row_count >= 5000
       - duplicate_count(order_id) = 0
     checks for line_items:
