--- a/examples/orders-latest/datacontract.yaml
+++ b/examples/orders-latest/datacontract.yaml
@@ -1,4 +1,4 @@
-dataContractSpecification: 0.9.2
+dataContractSpecification: 0.9.3
 id: urn:datacontract:checkout:orders-latest
 info:
   title: Orders Latest
@@ -6,7 +6,7 @@ info:
   description: |
     Successful customer orders in the webshop. 
     All orders since 2020-01-01. 
-    Orders with their line items are in their current state (no history included). 
+    Orders with their line items are in their current state (no history included).
   owner: Checkout Team
   contact:
     name: John Doe (Data Product Owner)
@@ -18,10 +18,10 @@ servers:
     format: json
     delimiter: new_line
 terms:
-  usage: >
+  usage: |
     Data can be used for reports, analytics and machine learning use cases.
     Order may be linked and joined by other tables
-  limitations: >
+  limitations: |
     Not suitable for real-time use cases.
     Data may not be used to identify individual customers.
     Max data processing per day: 10 TiB
@@ -96,7 +96,7 @@ definitions:
 examples:
   - type: csv # csv, json, yaml, custom
     model: orders
-    data: |- # expressed as string or inline yaml or via "$ref: data.csv"
+    data: | # expressed as string or inline yaml or via "$ref: data.csv"
       order_id,order_timestamp,order_total,customer_id,customer_email_address,processed_timestamp
       "1001","2030-09-09T08:30:00Z",2500,"1000000001","mary.taylor82@example.com","2030-09-09T08:31:00Z"
       "1002","2030-09-08T15:45:00Z",1800,"1000000002","michael.miller83@example.com","2030-09-09T08:31:00Z"
@@ -110,7 +110,7 @@ examples:
       "1010","2030-08-31T22:50:00Z",2700,"1000000009","mary.smith98@example.com","2030-09-09T08:31:00Z"
   - type: csv
     model: line_items
-    data: |-
+    data: |
       lines_item_id,order_id,sku
       "LI-1","1001","5901234123457"
       "LI-2","1001","4001234567890"
@@ -122,42 +122,44 @@ examples:
       "LI-8","1005","2001234567893"
       "LI-9","1005","5001234567892"
       "LI-10","1005","6001234567891"
-servicelevel:
+servicelevels:
   availability:
-    percentage: 99.9%
     description: The server is available during support hours
+    percentage: 99.9%
   retention:
+    description: Data is retained for one year because!
     period: P1Y
     unlimited: false
-    description: Data is retained for one year because!
   latency:
-    threshold: 25h
-    businessTimestampField: orders.order_timestamp
-    processedTimestampField: orders.processed_timestamp
     description: Data is available within 25 hours after the order was placed
+    threshold: 25h
+    sourceTimestampField: orders.order_timestamp
+    processedTimestampField: orders.processed_timestamp
   freshness:
+    description: The age of the youngest row in a table.
     threshold: 25h
     timestampField: orders.order_timestamp
-    description: The age of the youngest row in a table.
   frequency:
+    description: Data is delivered once a day
     type: batch # or streaming
     interval: daily # for batch, either or cron
     cron: 0 0 * * * # for batch, either or interval
-    description: Data is delivered once a day
   support:
+    description: The data is available during typical business hours at headquarters
     time: 9am to 5pm in EST on business days
     responseTime: 1h
-    description: The data is available during typical business hours at headquarters
   backup:
+    description: Data is backed up once a week, every Sunday at 0:00 UTC.
     interval: weekly
     cron: 0 0 * * 0
-    description: Data is backed up once a week, every Sunday at 0:00 UTC.
+    recoveryTime: 24 hours
+    recoveryPoint: 1 week
 quality:
   type: SodaCL   # data quality check format: SodaCL, montecarlo, custom
   specification: # expressed as string or inline yaml or via "$ref: checks.yaml"
     checks for orders:
-      - row_count >= 5000
+      - row_count >= 5
       - duplicate_count(order_id) = 0
     checks for line_items:
       - values in (order_id) must exist in orders (order_id)
-      - row_count >= 5000
+      - row_count >= 5
