--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,5 +17,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install datacontract-cli
+          datacontract --version
       - name: Validate examples
         run: .github/validate-examples
