--- a/examples/orders-latest/datacontract.yaml
+++ b/examples/orders-latest/datacontract.yaml
@@ -71,7 +71,7 @@ models:
         primary: true
       order_id:
         $ref: '#/definitions/order_id'
-        references: model.order_id
+        references: orders.order_id
       sku:
         description: The purchased article number
         $ref: '#/definitions/sku'
@@ -99,6 +99,7 @@ definitions:
 examples:
   - type: csv # csv, json, yaml, custom
     model: orders
+    description: An example list of order records.
     data: | # expressed as string or inline yaml or via "$ref: data.csv"
       order_id,order_timestamp,order_total,customer_id,customer_email_address,processed_timestamp
       "1001","2030-09-09T08:30:00Z",2500,"1000000001","mary.taylor82@example.com","2030-09-09T08:31:00Z"
@@ -113,6 +114,7 @@ examples:
       "1010","2030-08-31T22:50:00Z",2700,"1000000009","mary.smith98@example.com","2030-09-09T08:31:00Z"
   - type: csv
     model: line_items
+    description: An example list of line items.
     data: |
       lines_item_id,order_id,sku
       "LI-1","1001","5901234123457"
