--- a/examples/orders-latest-nested/datacontract.yaml
+++ b/examples/orders-latest-nested/datacontract.yaml
@@ -1,7 +1,7 @@
 dataContractSpecification: 0.9.3
-id: urn:datacontract:checkout:orders-latest
+id: urn:datacontract:checkout:orders-latest-nested
 info:
-  title: Orders Latest
+  title: Orders Latest (Nested)
   version: 1.0.0
   description: |
     Successful customer orders in the webshop. 
@@ -11,12 +11,6 @@ info:
   contact:
     name: John Doe (Data Product Owner)
     url: https://teams.microsoft.com/l/channel/example/checkout
-servers:
-  production:
-    type: s3
-    location: s3://datacontract-example-orders-latest/data/{model}/*.json
-    format: json
-    delimiter: new_line
 terms:
   usage: |
     Data can be used for reports, analytics and machine learning use cases.
@@ -112,75 +106,3 @@ definitions:
     description: |
       A Stock Keeping Unit (SKU) is an internal unique identifier for an article. 
       It is typically associated with an article's barcode, such as the EAN/GTIN.
-examples:
-  - type: csv # csv, json, yaml, custom
-    description: Example data generated with ChatGPT
-    model: orders
-    data: | # expressed as string or inline yaml or via "$ref: data.csv"
-      order_id,order_timestamp,order_total,customer_id,customer_email_address,processed_timestamp
-      "1001","2030-09-09T08:30:00Z",2500,"1000000001","mary.taylor82@example.com","2030-09-09T08:31:00Z"
-      "1002","2030-09-08T15:45:00Z",1800,"1000000002","michael.miller83@example.com","2030-09-09T08:31:00Z"
-      "1003","2030-09-07T12:15:00Z",3200,"1000000003","michael.smith5@example.com","2030-09-09T08:31:00Z"
-      "1004","2030-09-06T19:20:00Z",1500,"1000000004","elizabeth.moore80@example.com","2030-09-09T08:31:00Z"
-      "1005","2030-09-05T10:10:00Z",4200,"1000000004","elizabeth.moore80@example.com","2030-09-09T08:31:00Z"
-      "1006","2030-09-04T14:55:00Z",2800,"1000000005","john.davis28@example.com","2030-09-09T08:31:00Z"
-      "1007","2030-09-03T21:05:00Z",1900,"1000000006","linda.brown67@example.com","2030-09-09T08:31:00Z"
-      "1008","2030-09-02T17:40:00Z",3600,"1000000007","patricia.smith40@example.com","2030-09-09T08:31:00Z"
-      "1009","2030-09-01T09:25:00Z",3100,"1000000008","linda.wilson43@example.com","2030-09-09T08:31:00Z"
-      "1010","2030-08-31T22:50:00Z",2700,"1000000009","mary.smith98@example.com","2030-09-09T08:31:00Z"
-  - type: csv
-    model: line_items
-    description: Example data generated with ChatGPT
-    data: |
-      lines_item_id,order_id,sku
-      "LI-1","1001","5901234123457"
-      "LI-2","1001","4001234567890"
-      "LI-3","1002","5901234123457"
-      "LI-4","1002","2001234567893"
-      "LI-5","1003","4001234567890"
-      "LI-6","1003","5001234567892"
-      "LI-7","1004","5901234123457"
-      "LI-8","1005","2001234567893"
-      "LI-9","1005","5001234567892"
-      "LI-10","1005","6001234567891"
-servicelevels:
-  availability:
-    description: The server is available during support hours
-    percentage: 99.9%
-  retention:
-    description: Data is retained for one year because!
-    period: P1Y
-    unlimited: false
-  latency:
-    description: Data is available within 25 hours after the order was placed
-    threshold: 25h
-    sourceTimestampField: orders.order_timestamp
-    processedTimestampField: orders.processed_timestamp
-  freshness:
-    description: The age of the youngest row in a table.
-    threshold: 25h
-    timestampField: orders.order_timestamp
-  frequency:
-    description: Data is delivered once a day
-    type: batch # or streaming
-    interval: daily # for batch, either or cron
-    cron: 0 0 * * * # for batch, either or interval
-  support:
-    description: The data is available during typical business hours at headquarters
-    time: 9am to 5pm in EST on business days
-    responseTime: 1h
-  backup:
-    description: Data is backed up once a week, every Sunday at 0:00 UTC.
-    interval: weekly
-    cron: 0 0 * * 0
-    recoveryTime: 24 hours
-    recoveryPoint: 1 week
-quality:
-  type: SodaCL   # data quality check format: SodaCL, montecarlo, custom
-  specification: # expressed as string or inline yaml or via "$ref: checks.yaml"
-    checks for orders:
-      - row_count >= 5
-      - duplicate_count(order_id) = 0
-    checks for line_items:
-      - values in (order_id) must exist in orders (order_id)
-      - row_count >= 5
