--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install datacontract-cli
+          pip install datacontract-cli[all]
           datacontract --version
       - name: Validate examples
         run: .github/validate-examples
