--- a/examples/orders-latest/datacontract.yaml
+++ b/examples/orders-latest/datacontract.yaml
@@ -50,12 +50,14 @@ models:
         description: The business timestamp in UTC when the order was successfully registered in the source system and the payment was successful.
         type: timestamp
         required: true
-        example: "2024-09-09T08:30:00Z"
+        examples:
+          - "2024-09-09T08:30:00Z"
       order_total:
         description: Total amount the smallest monetary unit (e.g., cents).
         type: long
         required: true
-        example: "9999"
+        examples:
+          - "9999"
       customer_id:
         description: Unique identifier for the customer.
         type: text
@@ -88,6 +90,19 @@ models:
       - type: row_count
         engine: soda
         must_be_greater_than: 5
+    examples:
+      - |
+          order_id,order_timestamp,order_total,customer_id,customer_email_address,processed_timestamp
+          "1001","2030-09-09T08:30:00Z",2500,"1000000001","mary.taylor82@example.com","2030-09-09T08:31:00Z"
+          "1002","2030-09-08T15:45:00Z",1800,"1000000002","michael.miller83@example.com","2030-09-09T08:31:00Z"
+          "1003","2030-09-07T12:15:00Z",3200,"1000000003","michael.smith5@example.com","2030-09-09T08:31:00Z"
+          "1004","2030-09-06T19:20:00Z",1500,"1000000004","elizabeth.moore80@example.com","2030-09-09T08:31:00Z"
+          "1005","2030-09-05T10:10:00Z",4200,"1000000004","elizabeth.moore80@example.com","2030-09-09T08:31:00Z"
+          "1006","2030-09-04T14:55:00Z",2800,"1000000005","john.davis28@example.com","2030-09-09T08:31:00Z"
+          "1007","2030-09-03T21:05:00Z",1900,"1000000006","linda.brown67@example.com","2030-09-09T08:31:00Z"
+          "1008","2030-09-02T17:40:00Z",3600,"1000000007","patricia.smith40@example.com","2030-09-09T08:31:00Z"
+          "1009","2030-09-01T09:25:00Z",3100,"1000000008","linda.wilson43@example.com","2030-09-09T08:31:00Z"
+          "1010","2030-08-31T22:50:00Z",2700,"1000000009","mary.smith98@example.com","2030-09-09T08:31:00Z"
   line_items:
     description: A single article that is part of an order.
     type: table
@@ -104,53 +119,8 @@ models:
       sku:
         description: The purchased article number
         $ref: '#/definitions/sku'
-definitions:
-  order_id:
-    domain: checkout
-    name: order_id
-    title: Order ID
-    type: text
-    format: uuid
-    description: An internal ID that identifies an order in the online shop.
-    example: 243c25e5-a081-43a9-aeab-6d5d5b6cb5e2
-    pii: true
-    classification: restricted
-    tags:
-      - orders
-  sku:
-    domain: inventory
-    name: sku
-    title: Stock Keeping Unit
-    type: text
-    pattern: ^[A-Za-z0-9]{8,14}$
-    example: "96385074"
-    description: |
-      A Stock Keeping Unit (SKU) is an internal unique identifier for an article. 
-      It is typically associated with an article's barcode, such as the EAN/GTIN.
-    links:
-      wikipedia: https://en.wikipedia.org/wiki/Stock_keeping_unit
-    tags:
-      - inventory
-examples:
-  - type: csv # csv, json, yaml, custom
-    model: orders
-    description: An example list of order records.
-    data: | # expressed as string or inline yaml or via "$ref: data.csv"
-      order_id,order_timestamp,order_total,customer_id,customer_email_address,processed_timestamp
-      "1001","2030-09-09T08:30:00Z",2500,"1000000001","mary.taylor82@example.com","2030-09-09T08:31:00Z"
-      "1002","2030-09-08T15:45:00Z",1800,"1000000002","michael.miller83@example.com","2030-09-09T08:31:00Z"
-      "1003","2030-09-07T12:15:00Z",3200,"1000000003","michael.smith5@example.com","2030-09-09T08:31:00Z"
-      "1004","2030-09-06T19:20:00Z",1500,"1000000004","elizabeth.moore80@example.com","2030-09-09T08:31:00Z"
-      "1005","2030-09-05T10:10:00Z",4200,"1000000004","elizabeth.moore80@example.com","2030-09-09T08:31:00Z"
-      "1006","2030-09-04T14:55:00Z",2800,"1000000005","john.davis28@example.com","2030-09-09T08:31:00Z"
-      "1007","2030-09-03T21:05:00Z",1900,"1000000006","linda.brown67@example.com","2030-09-09T08:31:00Z"
-      "1008","2030-09-02T17:40:00Z",3600,"1000000007","patricia.smith40@example.com","2030-09-09T08:31:00Z"
-      "1009","2030-09-01T09:25:00Z",3100,"1000000008","linda.wilson43@example.com","2030-09-09T08:31:00Z"
-      "1010","2030-08-31T22:50:00Z",2700,"1000000009","mary.smith98@example.com","2030-09-09T08:31:00Z"
-  - type: csv
-    model: line_items
-    description: An example list of line items.
-    data: |
+    examples:
+    - |
       lines_item_id,order_id,sku
       "LI-1","1001","5901234123457"
       "LI-2","1001","4001234567890"
@@ -162,6 +132,35 @@ examples:
       "LI-8","1005","2001234567893"
       "LI-9","1005","5001234567892"
       "LI-10","1005","6001234567891"
+definitions:
+  order_id:
+    domain: checkout
+    name: order_id
+    title: Order ID
+    type: text
+    format: uuid
+    description: An internal ID that identifies an order in the online shop.
+    examples:
+      - 243c25e5-a081-43a9-aeab-6d5d5b6cb5e2
+    pii: true
+    classification: restricted
+    tags:
+      - orders
+  sku:
+    domain: inventory
+    name: sku
+    title: Stock Keeping Unit
+    type: text
+    pattern: ^[A-Za-z0-9]{8,14}$
+    examples:
+      - "96385074"
+    description: |
+      A Stock Keeping Unit (SKU) is an internal unique identifier for an article. 
+      It is typically associated with an article's barcode, such as the EAN/GTIN.
+    links:
+      wikipedia: https://en.wikipedia.org/wiki/Stock_keeping_unit
+    tags:
+      - inventory
 servicelevels:
   availability:
     description: The server is available during support hours
