--- a/examples/orders-latest/datacontract.yaml
+++ b/examples/orders-latest/datacontract.yaml
@@ -1,5 +1,5 @@
 dataContractSpecification: 1.2.0
-id: urn:datacontract:checkout:orders-latest
+id: orders-latest
 info:
   title: Orders Latest
   version: 2.0.0
